AMDP-312 Fix spacing of Key Use Case.

--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collection_overview.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_collection_overview.scss
@@ -8,7 +8,7 @@ $supporting-info: 9;
   flex: 1;
 
   &__overview {
-    margin: 0 0 56px 0;
+    margin: 0 0 86px 0;
 
     &__header {
       align-items: center;
